@@ -6,6 +6,8 @@ Version 1.5.3+svn:
    * More visible selection - draw a special overlay on every selected hex.
    * Allow different map generators to be used in map -> generate map
      (FR #3950)
+   * Reverse the preprocessor logic in src/ to default to building editor2,
+     with a DISABLE_EDITOR2 define to build without it.
  * Language and i18n:
    * updated translations: Chinese (Traditional), Czech, French, Galician,
      German, Hungarian, Italian, Polish
