@@ -32,3 +32,9 @@ Removed the --small-gui build option, starting Wesnoth with the --smallgui
 parameter achieves the same.
 
 ***
+
+Editor2 is now built by default, that is, without having to supply an extra 
+compilation flag. To build *without* editor2, set the DISABLE_EDITOR2 define. 
+The behaviour of scons, cmake and autotools is unchanged, this affects only
+people who use some other building method. If you start getting linker errors,
+you most likely need to add editor2's sources to the build or disable it.
